[package]
name = "f4"
authors = ["David Karwowski <karwowski.david@gmail.com>"]
description = "Board support crate for the STM32F429I Discovery Board"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
repository = "https://github.com/dkarwowski/f4"
documentation = "https://docs.rs/f4"
license = "MIT"
version = "0.2.0"

[dependencies]
bitflags = "0.8.2"
stm32f429x = "0.3.0"

[dependencies.cast]
version = "0.2.0"
default-features = "false"
